--- a/app/src/main/res/layout/activity_resultado_imc.xml
+++ b/app/src/main/res/layout/activity_resultado_imc.xml
@@ -48,6 +48,7 @@
         android:text="Calcular Gasto Calórico"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/categoria_tv"
+        android:backgroundTint="@color/blue"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -57,6 +58,7 @@
         android:layout_height="wrap_content"
         android:text="Voltar"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/blue"
         app:layout_constraintTop_toBottomOf="@id/calcular_gasto_bt"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
