--- a/app/src/main/res/layout/activity_gasto_calorico.xml
+++ b/app/src/main/res/layout/activity_gasto_calorico.xml
@@ -5,19 +5,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="24dp"
     tools:context=".GastoCaloricoActivity">
+
+    <include android:id="@+id/toolbar_in"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/resultado_tmb_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TMB:"
+        android:layout_marginTop="200dp"
         android:textSize="18sp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_in"/>
 
     <TextView
         android:id="@+id/gasto_diario_tv"
