--- a/app/src/main/res/layout/activity_resultado_imc.xml
+++ b/app/src/main/res/layout/activity_resultado_imc.xml
@@ -5,8 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="24dp"
     tools:context=".ResultadoIMCActivity">
+
+    <include android:id="@+id/toolbar_in"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/nome_resultado_tv"
@@ -14,10 +20,11 @@
         android:layout_height="wrap_content"
         android:text="Nome"
         android:textSize="20sp"
+        android:layout_marginTop="200dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_in"/>
 
     <TextView
         android:id="@+id/imc_resultado_tv"
