--- a/app/src/main/res/layout/activity_dados_pessoais.xml
+++ b/app/src/main/res/layout/activity_dados_pessoais.xml
@@ -51,13 +51,23 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp" />
 
+        <EditText
+            android:id="@+id/email_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="E-mail"
+            app:layout_constraintTop_toBottomOf="@id/idade_et"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp" />
+
         <RadioGroup
             android:id="@+id/sexo_rg"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="12dp"
-            app:layout_constraintTop_toBottomOf="@id/idade_et"
+            app:layout_constraintTop_toBottomOf="@id/email_et"
             app:layout_constraintStart_toStartOf="parent">
 
             <RadioButton
@@ -105,12 +115,24 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp" />
 
+        <CheckBox
+            android:id="@+id/informacoes_cb"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="24dp"
+            android:text="Gostaria de receber os resultados via e-mail?"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@id/nivel_sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <Button
             android:id="@+id/calcular_imc_bt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Calcular IMC"
-            app:layout_constraintTop_toBottomOf="@id/nivel_sp"
+            app:layout_constraintTop_toBottomOf="@id/informacoes_cb"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="30dp"
