--- a/app/src/main/res/layout/activity_peso_ideal.xml
+++ b/app/src/main/res/layout/activity_peso_ideal.xml
@@ -54,6 +54,7 @@
         android:layout_height="wrap_content"
         android:text="Voltar"
         android:layout_marginTop="20dp"
+        android:backgroundTint="@color/blue"
         app:layout_constraintTop_toBottomOf="@id/recomendacao_tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
