--- a/app/src/main/res/layout/activity_peso_ideal.xml
+++ b/app/src/main/res/layout/activity_peso_ideal.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PesoIdealActivity">
+    tools:context=".ui.PesoIdealActivity">
 
     <include android:id="@+id/toolbar_in"
         layout="@layout/toolbar"
