--- a/app/src/main/res/layout/activity_resumo_saude.xml
+++ b/app/src/main/res/layout/activity_resumo_saude.xml
@@ -81,6 +81,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/frequencia_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Frequência"
+        android:textSize="24sp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintTop_toBottomOf="@id/recomendacao_agua_resumo_tv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/zona_treino_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Zona de treino"
+        android:textSize="24sp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintTop_toBottomOf="@id/frequencia_tv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <Button
         android:id="@+id/historico_bt"
         android:layout_width="match_parent"
@@ -88,7 +110,7 @@
         android:text="Ir para Histórico"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/blue"
-        app:layout_constraintTop_toBottomOf="@id/recomendacao_agua_resumo_tv"
+        app:layout_constraintTop_toBottomOf="@id/zona_treino_tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
